--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/three-x3@0.0.10/dist/x3-standalone.js" integrity="sha256-oKQUM+QPtvuvLmxpqxdxbrJAq21SZ+7hYK8WlGztXNE=" crossorigin="anonymous"></script>
 
+    <!-- SETUPS -->
     <script type="text/javascript" src="./Threejs-project/setups/setup-02.js"></script>
 
-    <script type="text/javascript" src="Threejs-project/scenes/scene-01.js"></script>
+    <!-- SCENES -->
+    <script type="text/javascript" src="Threejs-project/scenes/scene-03.js"></script>
   
   </body>
 </html>
