--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
     </style>
 
-    <title>Three.js Course</title>
+    <title>Three.js</title>
   </head>
   <body>
     <div id="scene"></div>
